# Lab-6-CPP

./: .gitignore  CMakeLists.txt  CST8219_Lab6.docx  ElectricVehicle.cpp  ElectricVehicle.h  GasolineVehicle.cpp  GasolineVehicle.h  HybirdVehicle.cpp  HybirdVehicle.h  HybridVehicle.cpp  HybridVehicle.h  Vehicle.cpp  Vehicle.h  week2.cpp
